--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# datasets images
+*.png
+*.PNG
+*.jpg
+*.jpeg
+*.JPEG
+*.JPG
+*.webp
+*.gif
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
